--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 SERVER_PORT=8080
 DB_NAME="gimnasio"
 DB_USERNAME="root"
-DB_PASSWORD=""
+DB_PASSWORD="12345"
 DB_HOST="localhost"
 DB_DIALECT="mysql"
 DB_PORT=3306
+JWT_SECRET="secret"
