--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.5",
     "sequelize": "^6.32.0"
   }
