--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-SERVER_PORT=8080
+SERVER_PORT=2020
 DB_NAME="gimnasio"
 DB_USERNAME="root"
-DB_PASSWORD="12345"
+DB_PASSWORD=""
 DB_HOST="localhost"
 DB_DIALECT="mysql"
 DB_PORT=3306
